# demo-project-57408

./: README.md  pyproject.toml  requirements.txt
src/: main.py
tests/: test_main.py
